# Mlops

Course_2/: README.md
Course_2/api_temperature/historical-temperatures/: README.md  requirements.txt
Course_2/azure-chat-demo/: README.md  chat.py  requirements.txt
Course_3/: README.md
Course_3/module_1_lab_2_learnMySQL/: web.py
Course_3/module_2_lab_2_Create_dag_pandas/: README.md  create_DAG.py  create_pipe_line.py  wine_fine_funed.csv
Course_3/module_3_lab_1/: README.md  query.py  started_docker_qdrant.ipynb
Course_3/module_3_lab_1/qdrant_storage/: raft_state.json
Course_3/module_3_lab_2/: README.md  embedding.ipynb
Course_3/module_3_lab_3/: README.md
Course_3/module_4_lab_1/: README.md  Thomann_data_3.csv
Course_3/module_4_lab_2/: README.md  create_DAG.py  trigger_DAG_lap4.py
course_3/: README.MD
course_3/temp/: wine_databse.db
course_4/: README.md  test.sh
course_4/module_3_lab_1/: list_model.py
course_4/module_4_lab_2/: dynamodb batch-write-item \  records.json
course_4/module_4_lab_2/query_DB_invoke_agent/: Cargo.toml  Makefile  README.md
course_4/module_4_lab_2/query_DB_invoke_agent/src/: file_explain.rs  generic_handler.rs  main.rs
course_4/module_5_lab_1/: REDME.md
course_5/: README.md
course_5/module_3_lab1/: elo.py
course_5/module_3_lab_2/: README.md  lorax.yaml
course_6/: README.md
course_6/module_2_lab_1/: .README.md.swp  README.md  covert_wav.sh  invoke_transcript.sh
course_6/module_3_lab_1/: .env  README.md  main.py
course_6/module_4_lab_2/: README.md  main_run.py  requirements.txt
(+88 files in other folders)
